--- a/live.html
+++ b/live.html
@@ -125,7 +125,7 @@
     <div class="nav-home">
       <a href="/index.html">Home</a>
     </div>
-    <h1>Live</h1>
+    <h1>Live Stream</h1>
     <div id="liveStatus" class="live-status">? Checking...</div>
   </header>
 
