--- a/photos.html
+++ b/photos.html
@@ -93,38 +93,34 @@
       color: white;
     }
 
-    #slideshow {
-      width: 100%;
-      height: auto;
-      max-height: 80vh;
-      object-fit: contain;
-      border-radius: 10px;
-    }
-
-    .slideshow-btns {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 15px;
-    }
-
-    .slideshow-btns button {
-      font-size: 1.1rem;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 10px;
-      background: linear-gradient(145deg, #666, #444);
+    .row p {
+      font-size: 1rem;
+      line-height: 1.5;
       color: #fff;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 2px 2px 6px #333, -2px -2px 6px #777;
-      transition: all 0.2s ease-in-out;
     }
 
-    .slideshow-btns button:hover {
-      background: linear-gradient(145deg, #555, #333);
-      box-shadow: inset 1px 1px 3px #222, inset -1px -1px 3px #666;
+    .image-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(auto, 200px));
+      gap: 10px;
+      padding: 10px 0;
+      justify-items: center;
+    }
+
+    .grid-item img {
+      width: 112px;
+      height: 112px;
+      object-fit: contain;
+      border-radius: 8px;
+      background-color: transparent;
+      transition: transform 0.3s ease;
+      cursor: pointer;
+    }
+
+    .grid-item img:hover {
+      transform: scale(1.5);
+      z-index: 10;
+      position: relative;
     }
 
     .live-now {
@@ -146,19 +142,29 @@
     }
 
     @media (max-width: 600px) {
-      header h1 { font-size: 1.6rem; }
-      .link-buttons a { padding: 10px; font-size: 0.9rem; }
-      .nav-home a { padding: 8px 16px; font-size: 0.9rem; }
-      .slideshow-btns button { font-size: 1rem; padding: 10px 16px; }
+      header h1 {
+        font-size: 1.6rem;
+      }
+
+      .link-buttons a {
+        padding: 10px;
+        font-size: 0.9rem;
+      }
+
+      .nav-home a {
+        padding: 8px 16px;
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
+
 <body>
   <header>
     <div class="nav-home">
       <a href="/">Home</a>
     </div>
-    <h1>My Writing</h1>
+    <h1>Photos</h1>
   </header>
 
   <div class="link-buttons">
@@ -171,115 +177,96 @@
   </div>
 
   <div class="row">
-    <h2>Photo Slideshow</h2>
-    <div id="slideshow-container">
-      <img id="slideshow" src="" alt="Slideshow" />
-      <div class="slideshow-btns">
-        <button onclick="prevImage()">?? Prev</button>
-        <button onclick="toggleAutoplay()" id="autoplayBtn">?? Pause</button>
-        <button onclick="nextImage()">Next ??</button>
-      </div>
+    <h2>Photos</h2>
+    <div class="image-grid">
+      <?php
+        $directory = 'photos/';
+        $allowed_extensions = ['jpg', 'jpeg', 'png', 'gif', 'webp'];
+
+        $files = array_filter(scandir($directory), function($file) use ($directory, $allowed_extensions) {
+          $file_path = $directory . $file;
+          $file_extension = strtolower(pathinfo($file_path, PATHINFO_EXTENSION));
+          return is_file($file_path) && in_array($file_extension, $allowed_extensions);
+        });
+
+        foreach ($files as $file) {
+          $image_path = $directory . $file;
+          echo '<div class="grid-item">';
+          echo '<img src="' . htmlspecialchars($image_path) . '" alt="' . htmlspecialchars($file) . '">';
+          echo '</div>';
+        }
+      ?>
     </div>
   </div>
 
-<script>
-  async function loadScript(src) {
-    return new Promise((resolve, reject) => {
-      const s = document.createElement("script");
-      s.src = src;
-      s.onload = resolve;
-      s.onerror = reject;
-      document.head.appendChild(s);
-    });
-  }
+  <!-- Lightbox Modal -->
+  <div id="lightbox" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:1000;">
+    <img id="lightbox-img" src="" style="max-width:90%; max-height:90%; border-radius:10px; box-shadow:0 0 20px #000;" />
+  </div>
 
-  async function checkTwitchStatus() {
-    const btn = document.getElementById("liveNowBtn");
-    if (!btn || !window.streamConfig) return;
 
-    const { clientId, accessToken, channelName } = window.streamConfig;
-
-    try {
-      const response = await fetch(`https://api.twitch.tv/helix/streams?user_login=${channelName}`, {
-        headers: {
-          "Client-ID": clientId,
-          "Authorization": `Bearer ${accessToken}`
-        }
+  <script>
+    function loadScript(src) {
+      return new Promise((resolve, reject) => {
+        const s = document.createElement("script");
+        s.src = src;
+        s.onload = resolve;
+        s.onerror = reject;
+        document.head.appendChild(s);
       });
-
-      const data = await response.json();
-      const isLive = data.data && data.data.length > 0;
-
-      if (isLive) {
-        btn.innerHTML = "?? Live Now";
-        btn.classList.add("live-now");
-      } else {
-        btn.innerHTML = "? Offline";
-        btn.classList.remove("live-now");
-      }
-    } catch (err) {
-      console.error("Twitch check failed:", err);
-      btn.innerHTML = "? Error";
-    }
-  }
-
-  async function initPage() {
-    await loadScript(`/config.php?nocache=${Date.now()}`);
-
-    // Wait until window.streamConfig is available
-    if (typeof window.streamConfig !== "undefined") {
-      checkTwitchStatus();
-    } else {
-      console.error("streamConfig not loaded");
     }
 
-    const response = await fetch('/config.php?getImages');
-    const images = await response.json();
+    async function checkTwitchStatus() {
+      const btn = document.getElementById("liveNowBtn");
 
-    if (!Array.isArray(images) || images.length === 0) return;
+      try {
+        await loadScript(`/config.php?nocache=${Date.now()}`);
+        const { clientId, accessToken, channelName } = window.streamConfig || {};
 
-    const shuffledImages = images.sort(() => Math.random() - 0.5);
-    let currentIndex = 0;
-    let autoplay = true;
-    let autoplayInterval;
+        if (!clientId || !accessToken || !channelName) {
+          console.error("Missing stream config values.");
+          btn.innerHTML = "&#10067; Config Error";
+          return;
+        }
 
-    const img = document.getElementById('slideshow');
-    const autoplayBtn = document.getElementById('autoplayBtn');
+        const response = await fetch(`https://api.twitch.tv/helix/streams?user_login=${channelName}`, {
+          headers: {
+            "Client-ID": clientId,
+            "Authorization": `Bearer ${accessToken}`
+          }
+        });
 
-    function updateImage() {
-      img.src = `/photos/${shuffledImages[currentIndex]}`;
-    }
+        const data = await response.json();
+        const isLive = data.data && data.data.length > 0;
 
-    function nextImage() {
-      currentIndex = (currentIndex + 1) % shuffledImages.length;
-      updateImage();
-    }
-
-    function prevImage() {
-      currentIndex = (currentIndex - 1 + shuffledImages.length) % shuffledImages.length;
-      updateImage();
-    }
-
-    function toggleAutoplay() {
-      autoplay = !autoplay;
-      autoplayBtn.textContent = autoplay ? '?? Pause' : '?? Auto';
-      if (autoplay) {
-        autoplayInterval = setInterval(nextImage, 2500);
-      } else {
-        clearInterval(autoplayInterval);
+        if (isLive) {
+          btn.innerHTML = "&#128308; Live Now";
+          btn.classList.add("live-now");
+        } else {
+          btn.innerHTML = "&#128280; Offline";
+          btn.classList.remove("live-now");
+        }
+      } catch (err) {
+        console.error("Twitch check failed:", err);
+        btn.innerHTML = "&#10067; Error";
       }
     }
 
-    // Expose controls globally
-    window.prevImage = prevImage;
-    window.nextImage = nextImage;
-    window.toggleAutoplay = toggleAutoplay;
+    document.addEventListener("DOMContentLoaded", checkTwitchStatus);
 
-    updateImage();
-    autoplayInterval = setInterval(nextImage, 2500);
-  }
+    // Lightbox logic
+    document.querySelectorAll(".grid-item img").forEach(img => {
+      img.addEventListener("click", () => {
+        const lightbox = document.getElementById("lightbox");
+        const lightboxImg = document.getElementById("lightbox-img");
+        lightboxImg.src = img.src;
+        lightbox.style.display = "flex";
+      });
+    });
 
-  document.addEventListener("DOMContentLoaded", initPage);
-</script>
+    document.getElementById("lightbox").addEventListener("click", () => {
+      document.getElementById("lightbox").style.display = "none";
+    });
+  </script>
 </body>
 </html>
