--- a/photos.html
+++ b/photos.html
@@ -101,15 +101,15 @@
 
     .image-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(auto, 200px));
+      grid-template-columns: repeat(auto-fit, minmax(auto, 100%));
       gap: 10px;
       padding: 10px 0;
       justify-items: center;
     }
 
     .grid-item img {
-      width: 112px;
-      height: 112px;
+      width: 95%;
+      height: 95%;
       object-fit: contain;
       border-radius: 8px;
       background-color: transparent;
