--- a/mywriting.html
+++ b/mywriting.html
@@ -202,6 +202,9 @@
     <a href="/myvideos.html">My Videos</a>
     <a href="/pixelart.html">Pixel Art</a>
     <a href="/photos.html">Photos</a>
+    <a href="https://github.com/ruputron?tab=repositories">GitHub</a>
+    <a href="https://www.youtube.com/@rupsiedaisy">YouTube</a>
+    <a href="https://www.twitch.tv/totallynotrups">Twitch</a>
     <a id="liveNowBtn" href="/live.html">&#x26AB; Checking...</a>
   </div>
 
