--- a/live.html
+++ b/live.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Livestream</title>
+  <title>Live</title>
   <link rel="icon" href="/favicon/favicon.ico" />
   <style>
     * {
@@ -125,7 +125,7 @@
     <div class="nav-home">
       <a href="/index.html">Home</a>
     </div>
-    <h1>Live Stream</h1>
+    <h1>Live</h1>
     <div id="liveStatus" class="live-status">? Checking...</div>
   </header>
 
