--- a/mywriting.html
+++ b/mywriting.html
@@ -233,6 +233,16 @@
       <a href="/writing/poems/Jim Woodrow - At Home Where I Wander.pdf" target="_blank">Read</a>
     </div>
 
+    <div class="writing-item">
+      <p>Jim Woodrow - Time</p>
+      <a href="/writing/poems/Jim Woodrow - Time.pdf" target="_blank">Read</a>
+    </div>
+
+    <div class="writing-item">
+      <p>Jim Woodrow - Cold Nights Warm Stars</p>
+      <a href="/writing/poems/Jim Woodrow - Cold Nights Warm Stars.pdf" target="_blank">Read</a>
+    </div>
+
   <script>
     function loadScript(src) {
       return new Promise((resolve, reject) => {
