--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <a href="/pixelart.html">Pixel Art</a>
     <a href="/photos.html">Photos</a>
     <a href="https://github.com/ruputron?tab=repositories">GitHub</a>
-    <a href="https://www.youtube.com/@rupsiedaisy">YouTube</a>
+    <a href="https://www.youtube.com/@ruputron">YouTube</a>
     <a href="https://www.twitch.tv/totallynotrups">Twitch</a>
   </div>
 
@@ -186,54 +186,5 @@
     <p>The human race seem to be the masters of shitting on their own doorstep. The world we live in today is so full of piles of waste that we've made and have no way to dispose of it makes me think we forgot this planet is our home. What happened to the values of respecting the universe and the planet? It's the only one we've got for fucks sake.</p>
   </div>
 
-  <script>
-    function loadScript(src) {
-      return new Promise((resolve, reject) => {
-        const s = document.createElement("script");
-        s.src = src;
-        s.onload = resolve;
-        s.onerror = reject;
-        document.head.appendChild(s);
-      });
-    }
-
-    async function checkTwitchStatus() {
-      const btn = document.getElementById("liveNowBtn");
-
-      try {
-        await loadScript(`/config.php?nocache=${Date.now()}`);
-        const { clientId, accessToken, channelName } = window.streamConfig || {};
-
-        if (!clientId || !accessToken || !channelName) {
-          console.error("Missing stream config values.");
-          btn.innerHTML = "&#10067; Config Error";
-          return;
-        }
-
-        const response = await fetch(`https://api.twitch.tv/helix/streams?user_login=${channelName}`, {
-          headers: {
-            "Client-ID": clientId,
-            "Authorization": `Bearer ${accessToken}`
-          }
-        });
-
-        const data = await response.json();
-        const isLive = data.data && data.data.length > 0;
-
-        if (isLive) {
-          btn.innerHTML = "&#128308; Live Now";
-          btn.classList.add("live-now");
-        } else {
-          btn.innerHTML = "&#128280; Offline";
-          btn.classList.remove("live-now");
-        }
-      } catch (err) {
-        console.error("Twitch check failed:", err);
-        btn.innerHTML = "&#10067; Error";
-      }
-    }
-
-    document.addEventListener("DOMContentLoaded", checkTwitchStatus);
-  </script>
 </body>
 </html>
