--- a/mywriting.html
+++ b/mywriting.html
@@ -203,94 +203,60 @@
     <a href="/pixelart.html">Pixel Art</a>
     <a href="/photos.html">Photos</a>
     <a href="https://github.com/ruputron?tab=repositories">GitHub</a>
-    <a href="https://www.youtube.com/@rupsiedaisy">YouTube</a>
+    <a href="https://www.youtube.com/@ruputron">YouTube</a>
     <a href="https://www.twitch.tv/totallynotrups">Twitch</a>
   </div>
 
   <div class="writing-list">
     <div class="writing-item">
       <p>Jim Woodrow - Sleeping in the Trees</p>
-      <a href="/writing/poems/Jim Woodrow - Sleeping in the Trees.pdf" target="_blank">Read</a>
+      <a href="/writing/poems/Jim Woodrow - Sleeping in the Trees.txt" target="_blank">Read</a>
     </div>
 
     <div class="writing-item">
       <p>Jim Woodrow - The Bobbin and the Mill</p>
-      <a href="/writing/poems/Jim Woodrow - The Bobbin and the Mill.pdf" target="_blank">Read</a>
+      <a href="/writing/poems/Jim Woodrow - The Bobbin and the Mill.txt" target="_blank">Read</a>
     </div>
 
     <div class="writing-item">
       <p>Jim Woodrow - Hope</p>
-      <a href="/writing/poems/Jim Woodrow - Hope.pdf" target="_blank">Read</a>
+      <a href="/writing/poems/Jim Woodrow - Hope.txt" target="_blank">Read</a>
     </div>
 
     <div class="writing-item">
       <p>Jim Woodrow - Echo Chambers</p>
-      <a href="/writing/poems/Jim Woodrow - Echo Chambers.pdf" target="_blank">Read</a>
+      <a href="/writing/poems/Jim Woodrow - Echo Chambers.txt" target="_blank">Read</a>
     </div>
 
     <div class="writing-item">
       <p>Jim Woodrow - At Home Where I Wander</p>
-      <a href="/writing/poems/Jim Woodrow - At Home Where I Wander.pdf" target="_blank">Read</a>
+      <a href="/writing/poems/Jim Woodrow - At Home Where I Wander.txt" target="_blank">Read</a>
     </div>
 
     <div class="writing-item">
       <p>Jim Woodrow - Time</p>
-      <a href="/writing/poems/Jim Woodrow - Time.pdf" target="_blank">Read</a>
+      <a href="/writing/poems/Jim Woodrow - Time.txt" target="_blank">Read</a>
     </div>
 
     <div class="writing-item">
       <p>Jim Woodrow - Cold Nights Warm Stars</p>
-      <a href="/writing/poems/Jim Woodrow - Cold Nights Warm Stars.pdf" target="_blank">Read</a>
+      <a href="/writing/poems/Jim Woodrow - Cold Nights Warm Stars.txt" target="_blank">Read</a>
     </div>
 
-  <script>
-    function loadScript(src) {
-      return new Promise((resolve, reject) => {
-        const s = document.createElement("script");
-        s.src = src;
-        s.onload = resolve;
-        s.onerror = reject;
-        document.head.appendChild(s);
-      });
-    }
+    <div class="writing-item">
+      <p>Jim Woodrow - Relatively Braindead</p>
+      <a href="/writing/poems/Jim Woodrow - Relatively Braindead.txt" target="_blank">Read</a>
+    </div>
 
-    async function checkTwitchStatus() {
-      const btn = document.getElementById("liveNowBtn");
+    <div class="writing-item">
+      <p>Jim Woodrow - Bus Stop Blues</p>
+      <a href="/writing/poems/Jim Woodrow - Bus Stop Blues.txt" target="_blank">Read</a>
+    </div>
 
-      try {
-        await loadScript(`/config.php?nocache=${Date.now()}`);
-        const { clientId, accessToken, channelName } = window.streamConfig || {};
+    <div class="writing-item">
+      <p>Jim Woodrow - Bo Staff Dancer</p>
+      <a href="/writing/poems/Jim Woodrow - Bo Staff Dancer.txt" target="_blank">Read</a>
+    </div>
 
-        if (!clientId || !accessToken || !channelName) {
-          console.error("Missing stream config values.");
-          btn.innerHTML = "&#10067; Config Error";
-          return;
-        }
-
-        const response = await fetch(`https://api.twitch.tv/helix/streams?user_login=${channelName}`, {
-          headers: {
-            "Client-ID": clientId,
-            "Authorization": `Bearer ${accessToken}`
-          }
-        });
-
-        const data = await response.json();
-        const isLive = data.data && data.data.length > 0;
-
-        if (isLive) {
-          btn.innerHTML = "&#128308; Live Now";
-          btn.classList.add("live-now");
-        } else {
-          btn.innerHTML = "&#128280; Offline";
-          btn.classList.remove("live-now");
-        }
-      } catch (err) {
-        console.error("Twitch check failed:", err);
-        btn.innerHTML = "&#10067; Error";
-      }
-    }
-
-    document.addEventListener("DOMContentLoaded", checkTwitchStatus);
-  </script>
 </body>
 </html>
