--- a/photos.html
+++ b/photos.html
@@ -174,7 +174,7 @@
     <a href="/pixelart.html">Pixel Art</a>
     <a href="/photos.html">Photos</a>
     <a href="https://github.com/ruputron?tab=repositories">GitHub</a>
-    <a href="https://www.youtube.com/@rupsiedaisy">YouTube</a>
+    <a href="https://www.youtube.com/@ruputron">YouTube</a>
     <a href="https://www.twitch.tv/totallynotrups">Twitch</a>
   </div>
 
@@ -222,67 +222,5 @@
     " />
   </div>
 
-  <script>
-    function loadScript(src) {
-      return new Promise((resolve, reject) => {
-        const s = document.createElement("script");
-        s.src = src;
-        s.onload = resolve;
-        s.onerror = reject;
-        document.head.appendChild(s);
-      });
-    }
-
-    async function checkTwitchStatus() {
-      const btn = document.getElementById("liveNowBtn");
-
-      try {
-        await loadScript(`/config.php?nocache=${Date.now()}`);
-        const { clientId, accessToken, channelName } = window.streamConfig || {};
-
-        if (!clientId || !accessToken || !channelName) {
-          console.error("Missing stream config values.");
-          btn.innerHTML = "&#10067; Config Error";
-          return;
-        }
-
-        const response = await fetch(`https://api.twitch.tv/helix/streams?user_login=${channelName}`, {
-          headers: {
-            "Client-ID": clientId,
-            "Authorization": `Bearer ${accessToken}`
-          }
-        });
-
-        const data = await response.json();
-        const isLive = data.data && data.data.length > 0;
-
-        if (isLive) {
-          btn.innerHTML = "&#128308; Live Now";
-          btn.classList.add("live-now");
-        } else {
-          btn.innerHTML = "&#128280; Offline";
-          btn.classList.remove("live-now");
-        }
-      } catch (err) {
-        console.error("Twitch check failed:", err);
-        btn.innerHTML = "&#10067; Error";
-      }
-    }
-
-    document.querySelectorAll(".grid-item img").forEach(img => {
-      img.addEventListener("click", () => {
-        const lightbox = document.getElementById("lightbox");
-        const lightboxImg = document.getElementById("lightbox-img");
-        lightboxImg.src = img.src;
-        lightbox.style.display = "flex";
-      });
-    });
-
-    document.addEventListener("DOMContentLoaded", checkTwitchStatus);
-
-    document.getElementById("lightbox").addEventListener("click", () => {
-      document.getElementById("lightbox").style.display = "none";
-    });
-  </script>
 </body>
 </html>
