--- a/mywriting.html
+++ b/mywriting.html
@@ -257,5 +257,10 @@
       <a href="/writing/poems/Jim Woodrow - Bo Staff Dancer.txt" target="_blank">Read</a>
     </div>
 
+    <div class="writing-item">
+      <p>Jim Woodrow - Because It's Easier To Blame Someone Else...</p>
+      <a href="/writing/poems/Jim Woodrow - Because It's Easier To Blame Someone Else.txt" target="_blank">Read</a>
+    </div>
+
 </body>
 </html>
