--- a/mysongs.html
+++ b/mysongs.html
@@ -150,13 +150,6 @@
       color: #fff;
     }
 
-    .live-now {
-      background-color: #c62828 !important;
-      font-weight: bold;
-      animation: pulse 2s infinite;
-      box-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
-    }
-
     @keyframes pulse {
       0% { box-shadow: 0 0 5px rgba(255, 0, 0, 0.5); }
       50% { box-shadow: 0 0 15px rgba(255, 0, 0, 1); }
@@ -198,7 +191,9 @@
     <a href="/mywriting.html">My Writing</a>
     <a href="/mysongs.html">My Songs</a>
     <a href="/pixelart.html">Pixel Art</a>
-    <a href="/photos.html">Photos</a>
+    <a href="/photos.html">Photos</a>    
+	<a href="/videos.html">Videos</a>
+	<a href="https://ibb.co/album/v1WHNX">ImgBB</a>
     <a href="https://github.com/ruputron?tab=repositories">GitHub</a>
     <a href="https://www.youtube.com/@ruputron">YouTube</a>
     <a href="https://www.twitch.tv/totallynotrups">Twitch</a>
