--- a/radioplaylist.html
+++ b/radioplaylist.html
@@ -97,7 +97,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Rupu's Random Radio</h1>
+    <h1>(I'm not gay)</h1>
     <p>Each visit starts somewhere new. <br>Looping endlessly in the dark.</p>
 
     <div class="controls">
