--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Photos</title>
+  <title>Videos</title>
   <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
   <style>
     * { box-sizing: border-box; }
@@ -130,7 +130,7 @@
     <div class="nav-home">
       <a href="/">Home</a>
     </div>
-    <h1>Photos</h1>
+    <h1>Videos</h1>
   </header>
 
   <div class="link-buttons">
