--- a/videos.html
+++ b/videos.html
@@ -95,7 +95,7 @@
 
     .video-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(80% , 1fr));
       gap: 10px;
       padding: 10px 0;
       justify-items: center;
