--- a/radioplaylist.html
+++ b/radioplaylist.html
@@ -97,7 +97,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>(I'm not gay)</h1>
+    <h1>You found the magic defibrilator</h1>
     <p>Each visit starts somewhere new. <br>Looping endlessly in the dark.</p>
 
     <div class="controls">
@@ -131,7 +131,7 @@
 
     let isFading = false;
 
-    audio.src = "https://rupu.crabdance.com/music/RupsRadioPlaylist.mp3";
+    audio.src = "https://rupu.crabdance.com/music/Peatbog Faeries - Blackhouse.mp3";
     audio.volume = 0;
     volumeSlider.value = 0;
 
