--- a/mywriting.html
+++ b/mywriting.html
@@ -191,71 +191,17 @@
 
   <div class="link-buttons">
     <a href="/mywriting.html">My Writing</a>
-    <a href="/mysongs.html">My Songs</a>
-    <a href="/pixelart.html">Pixel Art</a>
-    <a href="/photos.html">Photos</a>    
-	<a href="/videos.html">Videos</a>
-	<a href="https://ibb.co/album/v1WHNX">ImgBB</a>
+    <a href="/photos.html">Photos</a>
+    <a href="https://www.deviantart.com/ruputron">Pixel Art</a>
+    <a href="https://ibb.co/album/v1WHNX">ImgBB</a>
     <a href="https://github.com/ruputron?tab=repositories">GitHub</a>
     <a href="https://www.youtube.com/@ruputron">YouTube</a>
     <a href="https://www.twitch.tv/totallynotrups">Twitch</a>
   </div>
 
-  <div class="writing-list">
-    <div class="writing-item">
-      <p>Jim Woodrow - Sleeping in the Trees</p>
-      <a href="/writing/poems/Jim Woodrow - Sleeping in the Trees.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - The Bobbin and the Mill</p>
-      <a href="/writing/poems/Jim Woodrow - The Bobbin and the Mill.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - Hope</p>
-      <a href="/writing/poems/Jim Woodrow - Hope.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - Echo Chambers</p>
-      <a href="/writing/poems/Jim Woodrow - Echo Chambers.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - At Home Where I Wander</p>
-      <a href="/writing/poems/Jim Woodrow - At Home Where I Wander.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - Time</p>
-      <a href="/writing/poems/Jim Woodrow - Time.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - Cold Nights Warm Stars</p>
-      <a href="/writing/poems/Jim Woodrow - Cold Nights Warm Stars.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - Relatively Braindead</p>
-      <a href="/writing/poems/Jim Woodrow - Relatively Braindead.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - Bus Stop Blues</p>
-      <a href="/writing/poems/Jim Woodrow - Bus Stop Blues.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - Bo Staff Dancer</p>
-      <a href="/writing/poems/Jim Woodrow - Bo Staff Dancer.txt" target="_blank">Read</a>
-    </div>
-
-    <div class="writing-item">
-      <p>Jim Woodrow - Because It's Easier To Blame Someone Else...</p>
-      <a href="/writing/poems/Jim Woodrow - Because It's Easier To Blame Someone Else.txt" target="_blank">Read</a>
-    </div>
+  <div class="link-buttons">
+   <a href="/albums/Jim Woodrow - Between A London Jab And A Glasgow Kiss.zip">Between A London Jab And A Glasgow Kiss</a>
+  </div>
 
 </body>
 </html>
