--- a/index.html
+++ b/index.html
@@ -137,19 +137,14 @@
 
 <body>
   <header>
-    <div class="nav-home">
-    <a href="/radioplaylist.html">Radio</a> 
-    </div>
     <h1>The Cave</h1>
   </header>
 
   <div class="link-buttons">
     <a href="/mywriting.html">My Writing</a>
-    <a href="/mysongs.html">My Songs</a>
-    <a href="/pixelart.html">Pixel Art</a>
-    <a href="/photos.html">Photos</a>    
-	<a href="/videos.html">Videos</a>
-	<a href="https://ibb.co/album/v1WHNX">ImgBB</a>
+    <a href="/photos.html">Photos</a>
+    <a href="https://www.deviantart.com/ruputron">Pixel Art</a>
+    <a href="https://ibb.co/album/v1WHNX">ImgBB</a>
     <a href="https://github.com/ruputron?tab=repositories">GitHub</a>
     <a href="https://www.youtube.com/@ruputron">YouTube</a>
     <a href="https://www.twitch.tv/totallynotrups">Twitch</a>
